-- Meal Planner — Postgres schema (portfolio / AWS RDS)
-- Surrogate keys: INTEGER + IDENTITY (~2B rows max per table; fine for a small app).
-- Extensions for full-text recipe search
CREATE EXTENSION IF NOT EXISTS pg_trgm;

-- ---------------------------------------------------------------------------
-- Users: map to Cognito `sub` in application layer
-- ---------------------------------------------------------------------------
CREATE TABLE users (
  id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  cognito_sub TEXT UNIQUE NOT NULL,
  email TEXT,
  display_name TEXT,
  preferred_mass_unit TEXT DEFAULT 'g',
  preferred_volume_unit TEXT DEFAULT 'ml',
  created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

-- ---------------------------------------------------------------------------
-- Recipes
-- ---------------------------------------------------------------------------
CREATE TYPE recipe_status AS ENUM ('library', 'planned');

CREATE TABLE recipes (
  id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  user_id INTEGER NOT NULL REFERENCES users (id) ON DELETE CASCADE,
  title TEXT NOT NULL,
  description TEXT,
  directions TEXT,
  notes TEXT,
  image_url TEXT,
  source_url TEXT,
  category TEXT NOT NULL DEFAULT '',
  keywords TEXT[] NOT NULL DEFAULT '{}',
  prep_time_min INT,
  cook_time_min INT,
  servings NUMERIC NOT NULL DEFAULT 1 CHECK (servings > 0),
  status recipe_status NOT NULL DEFAULT 'library',
  search_vector tsvector,
  ingredients_json JSONB NOT NULL DEFAULT '[]'::jsonb,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX recipes_user_status_idx ON recipes (user_id, status);
CREATE INDEX recipes_search_idx ON recipes USING GIN (search_vector);
CREATE INDEX recipes_keywords_idx ON recipes USING GIN (keywords);

-- ---------------------------------------------------------------------------
-- Ingredient sections ("Batter", "Topping", …)
-- ---------------------------------------------------------------------------
CREATE TABLE ingredient_sections (
  id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  title TEXT NOT NULL,
  position INT NOT NULL DEFAULT 0
);

INSERT INTO ingredient_sections (id, title, position)
OVERRIDING SYSTEM VALUE
VALUES (0, 'Ingredients', 0);

-- ---------------------------------------------------------------------------
-- Recipe ingredients + normalization columns (conversion / dedupe)
-- ---------------------------------------------------------------------------
CREATE TABLE recipe_ingredients (
  id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  recipe_id INTEGER NOT NULL REFERENCES recipes (id) ON DELETE CASCADE,
  section_id INTEGER REFERENCES ingredient_sections (id) ON DELETE SET NULL,
  section_position INT NOT NULL DEFAULT 0,
  position INT NOT NULL DEFAULT 0,
  line TEXT NOT NULL DEFAULT '',
  canonical_ingredient_id INTEGER,
  quantity_normalized_g NUMERIC,
  quantity_normalized_ml NUMERIC,
  normalization_confidence NUMERIC
);

CREATE INDEX recipe_ingredients_recipe_idx ON recipe_ingredients (recipe_id);

-- ---------------------------------------------------------------------------
-- Nutrition snapshot (per recipe, totals scale with servings)
-- ---------------------------------------------------------------------------
CREATE TABLE recipe_nutrition (
  recipe_id INTEGER PRIMARY KEY REFERENCES recipes (id) ON DELETE CASCADE,
  kcal NUMERIC,
  protein_g NUMERIC,
  carbs_g NUMERIC,
  fat_g NUMERIC,
  per_100g_kcal NUMERIC,
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

-- ---------------------------------------------------------------------------
-- Unit conversion reference data
-- ---------------------------------------------------------------------------
CREATE TABLE unit_definitions (
  code TEXT PRIMARY KEY,
  dimension TEXT NOT NULL CHECK (dimension IN ('mass', 'volume', 'count')),
  display_name TEXT NOT NULL
);

CREATE TABLE unit_conversions (
  id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  from_unit TEXT NOT NULL REFERENCES unit_definitions (code),
  to_unit TEXT NOT NULL REFERENCES unit_definitions (code),
  multiplier NUMERIC NOT NULL,
  UNIQUE (from_unit, to_unit)
);

-- Canonical ingredient row for density + dedupe (surrogate key)
CREATE TABLE ingredient_density_profiles (
  id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  grams_per_ml NUMERIC NOT NULL CHECK (grams_per_ml > 0),
  note TEXT
);

ALTER TABLE recipe_ingredients
  ADD CONSTRAINT recipe_ingredients_canonical_fk
  FOREIGN KEY (canonical_ingredient_id) REFERENCES ingredient_density_profiles (id);

CREATE TABLE ingredient_aliases (
  id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  canonical_ingredient_id INTEGER NOT NULL REFERENCES ingredient_density_profiles (id) ON DELETE CASCADE,
  alias TEXT NOT NULL,
  UNIQUE (alias)
);

-- ---------------------------------------------------------------------------
-- Shopping lists (active + saved with date)
-- ---------------------------------------------------------------------------
CREATE TYPE shopping_list_status AS ENUM ('active', 'saved');

CREATE TABLE shopping_lists (
  id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  user_id INTEGER NOT NULL REFERENCES users (id) ON DELETE CASCADE,
  name TEXT,
  status shopping_list_status NOT NULL DEFAULT 'active',
  saved_at TIMESTAMPTZ,
  source_list_id INTEGER REFERENCES shopping_lists (id),
  created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX shopping_lists_user_idx ON shopping_lists (user_id, status);

CREATE TABLE shopping_list_items (
  id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  shopping_list_id INTEGER NOT NULL REFERENCES shopping_lists (id) ON DELETE CASCADE,
  position INT NOT NULL DEFAULT 0,
  name TEXT NOT NULL,
  quantity NUMERIC,
  unit TEXT,
  category TEXT,
  checked BOOLEAN NOT NULL DEFAULT false,
  source_recipe_id INTEGER REFERENCES recipes (id) ON DELETE SET NULL,
  is_manual BOOLEAN NOT NULL DEFAULT false,
  canonical_ingredient_id INTEGER REFERENCES ingredient_density_profiles (id)
);

CREATE INDEX shopping_list_items_list_idx ON shopping_list_items (shopping_list_id);

-- ---------------------------------------------------------------------------
-- Optional: refresh search_vector in app or trigger
-- ---------------------------------------------------------------------------
-- CREATE OR REPLACE FUNCTION recipes_search_update() ...
